[tool.poetry]
name = "jesture"
description = "Customisable Gesture Recognition Model"
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mediapipe = "^0.10.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
